--- a/src/expressjs/pages/home/index.html
+++ b/src/expressjs/pages/home/index.html
@@ -25,32 +25,34 @@
 
   <!-- Nav bar -->
   <body class="flex flex-col items-center bg-slate-100 dark:bg-black dark:text-white">
-    <div id="main" class="max-w-5xl container mx-auto bg-white dark:bg-zinc-900 m-2 px-6 rounded-lg">
-      <header class="blog-header py-3">
-        <div class="flex items-center justify-between">
-          <div class="w-1/4">
-            <div class="social-icons">
-              <a href="https://github.com/jakeoliverlee">
+    <div id="main" class="nav max-w-5xl container mx-auto bg-white dark:bg-zinc-900 m-2 px-6 rounded-lg">
+      <header class="blog-header py-3 flex flex-wrap items-center justify-between">
+        <div class="w-full sm:w-1/4">
+          <div class="social-icons flex justify-start sm:justify-center">
+            <a href="https://github.com/jakeoliverlee">
               <img src="assets/images/icons8-github-94.png" alt="github" class="h-7 w-7">
-              </a>
-              <a href="https://www.linkedin.com/in/jake-lee-4aa088129/">
+            </a>
+            <a href="https://www.linkedin.com/in/jake-lee-4aa088129/">
               <img src="assets/svgs/linkedin.svg" alt="linkedin" class="h-7 w-7">
-              </a>
-              <a href="https://gitlab.com/jakeoliverlee">
-                <img src="assets/svgs/gitlab.svg" alt="gitlab" class="h-7 w-7">
-              </a>
-            </div>
+            </a>
+            <a href="https://gitlab.com/jakeoliverlee">
+              <img src="assets/svgs/gitlab.svg" alt="gitlab" class="h-7 w-7">
+            </a>
           </div>
-          <div class="w-1/4 text-center">
-            <a class="blog-header-logo text-dark" href="#">Jake Lee</a>
-          </div>
-          <div class="w-1/4 flex justify-end items-center">
+        </div>
+        <div class="w-full sm:w-1/4 text-center">
+          <a class="blog-header-logo text-dark" href="#">Jake Lee</a>
+        </div>
+        <div class="w-full sm:w-1/4 flex justify-end items-center">
             <button id="theme-toggle" type="button" class="text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-1 mr-4">
               <svg id="theme-toggle-dark-icon" class="hidden w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"></path></svg>
               <svg id="theme-toggle-light-icon" class="hidden w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z" fill-rule="evenodd" clip-rule="evenodd"></path></svg>
           </button>
-          <a type="button" class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-4 py-2 mr-2  dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700 shadow-md" href="mailto:jakeoliverlee@gmail.com">Contact Me</a>
-          </div>
+          <div class="relative">
+            <div class="absolute inset-0 bg-blue-600 rounded-lg blur-sm opacity-75"></div>
+          <a type="button" id="Contact_Me" class="relative text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-4 py-2  dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700 shadow-md" href="mailto:jakeoliverlee@gmail.com">Contact Me</a>
+        </div>
+        </div>
         </div>
       </header>
     </div>
@@ -73,7 +75,7 @@
       <div id="about-me" class="mt-7 ml-4 p-3">
         <div class="flex flex-wrap md:flex-no-wrap">
           <div class="flex-1">
-            <h1 class="text-4xl font-bold">A little...about...me!</h1>
+            <h1 class="text-4xl font-bold">About me</h1>
             <p class="mt-6 text-base text-zinc-600 dark:text-zinc-400 max-w-4xl sm:mb-4">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit.
               Pellentesque Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -151,7 +153,7 @@
           </a>
       </div>
       <div class="grid md:grid-cols-2 gap-8">
-          <div class="bg-gray-50 dark:bg-zinc-900 rounded-lg p-8 md:p-12">
+          <div class="reveal bg-gray-50 dark:bg-zinc-900 rounded-lg p-8 md:p-12">
               <a href="#" class="bg-green-100 text-green-800 text-xs font-medium inline-flex items-center px-2.5 py-0.5 rounded-md dark:bg-gray-700 dark:text-green-400 mb-2">
                   <svg class="w-3 h-3 mr-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
                       <path clip-rule="evenodd" fill-rule="evenodd" d="M4 2a2 2 0 00-2 2v11a3 3 0 106 0V4a2 2 0 00-2-2H4zm1 14a1 1 0 100-2 1 1 0 000 2zm5-1.757l4.9-4.9a2 2 0 000-2.828L13.485 5.1a2 2 0 00-2.828 0L10 5.757v8.486zM16 18H9.071l6-6H16a2 2 0 012 2v2a2 2 0 01-2 2z"></path>
@@ -166,7 +168,7 @@
                   </svg>
               </a>
           </div>
-          <div class="bg-gray-50 dark:bg-zinc-900 rounded-lg p-8 md:p-12">
+          <div class="reveal bg-gray-50 dark:bg-zinc-900 rounded-lg p-8 md:p-12">
               <a href="#" class="bg-purple-100 text-purple-800 text-xs font-medium inline-flex items-center px-2.5 py-0.5 rounded-md dark:bg-gray-700 dark:text-purple-400 mb-2">
                   <svg class="w-3 h-3 mr-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
                       <path clip-rule="evenodd" fill-rule="evenodd" d="M12.316 3.051a1 1 0 01.633 1.265l-4 12a1 1 0 11-1.898-.632l4-12a1 1 0 011.265-.633zM5.707 6.293a1 1 0 010 1.414L3.414 10l2.293 2.293a1 1 0 11-1.414 1.414l-3-3a1 1 0 010-1.414l3-3a1 1 0 011.414 0zm8.586 0a1 1 0 011.414 0l3 3a1 1 0 010 1.414l-3 3a1 1 0 11-1.414-1.414L16.586 10l-2.293-2.293a1 1 0 010-1.414z"></path>
@@ -184,6 +186,27 @@
       </div>
   </div>
 </section>
+
+<section class="bg-white dark:bg-gray-900">
+  <div class="grid max-w-screen-xl px-4 py-8 mx-auto lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12">
+      <div class="mr-auto place-self-center lg:col-span-7">
+          <h1 class="max-w-2xl mb-4 text-4xl font-extrabold tracking-tight leading-none md:text-5xl xl:text-6xl dark:text-white">Payments tool for software companies</h1>
+          <p class="max-w-2xl mb-6 font-light text-gray-500 lg:mb-8 md:text-lg lg:text-xl dark:text-gray-400">From checkout to global sales tax compliance, companies around the world use Flowbite to simplify their payment stack.</p>
+          <a href="#" class="inline-flex items-center justify-center px-5 py-3 mr-3 text-base font-medium text-center text-white rounded-lg bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:focus:ring-primary-900">
+              Get started
+              <svg class="w-5 h-5 ml-2 -mr-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+          </a>
+          <a href="#" class="inline-flex items-center justify-center px-5 py-3 text-base font-medium text-center text-gray-900 border border-gray-300 rounded-lg hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 dark:text-white dark:border-gray-700 dark:hover:bg-gray-700 dark:focus:ring-gray-800">
+              Speak to Sales
+          </a>
+      </div>
+      <div class="hidden lg:mt-0 lg:col-span-5 lg:flex">
+          <img src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/hero/phone-mockup.png" alt="mockup">
+      </div>
+  </div>
+</section>
+
+
 <section class="bg-white dark:bg-zinc-900  antialiased">
   <div class="max-w-screen-xl px-4 py-8 mx-auto lg:px-6 sm:py-16 lg:py-24">
     <div class="max-w-2xl mx-auto text-center">
@@ -221,7 +244,7 @@
           Personal
         </span>
         <h3 class="text-2xl font-bold leading-tight text-gray-900 dark:text-white">
-          Official website
+          Official Website
         </h3>
         <p class="text-lg font-normal text-gray-500 dark:text-gray-400">
           This website is my personal resume website, it was built using React, styled with Tailwind CSS with NodeJS as its runtime environment.
