--- a/src/expressjs/pages/home/index.html
+++ b/src/expressjs/pages/home/index.html
@@ -13,7 +13,7 @@
     <!-- Icons for socials -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://kit.fontawesome.com/85539b08a7.js" crossorigin="anonymous"></script>
-
+    <script src="https://unpkg.com/@codersrank/skills-chart@x.x.x/codersrank-skills-chart.min.js"></script>
     <!-- Custom styles for this template -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -49,7 +49,7 @@
               <svg id="theme-toggle-light-icon" class="hidden w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z" fill-rule="evenodd" clip-rule="evenodd"></path></svg>
           </button>
           <div class="relative">
-            <div class="absolute inset-0 bg-blue-600 rounded-lg blur-sm opacity-75"></div>
+            <div class="absolute inset-0 bg-blue-200 rounded-lg blur-sm opacity-75"></div>
           <a type="button" id="Contact_Me" class="relative text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-4 py-2  dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700 shadow-md" href="mailto:jakeoliverlee@gmail.com">Contact Me</a>
         </div>
         </div>
@@ -57,16 +57,16 @@
       </header>
     </div>
 
-    <div class="py-1 nav-scroller mb-2 mt-1 ml-5 justify-start text-left rounded-full bg-white/90 dark:bg-zinc-900 ring-1 dark:ring-zinc-300/20  text-sm font-medium shadow-md">
+    <div class="py-1 nav-scroller mb-2 mt-1 ml-5 justify-start text-left rounded-full bg-white/90 dark:bg-zinc-900 ring-1 r dark:ring-zinc-300/20  text-sm font-medium shadow-md">
       <nav class="px-3 nav d-flex justify-between">
         <div class="flex-1">
-          <a id="work-experience-link" class="font-sans block px-3 py-2 text-muted" href="#">Projects</a>
+          <a id="work-experience-link" class="font-sans block px-3 py-2 text-muted hover:text-blue-700 dark:hover:text-blue-200" href="#projects">Projects</a>
         </div>
         <div class="flex-1">
-          <a id="projects-link" class="font-sans block px-3 py-2 text-muted" href="/work">Work</a>
+          <a id="projects-link" class="font-sans block px-3 py-2 text-muted hover:text-blue-700 dark:hover:text-blue-200" href="/work">Work</a>
         </div>
         <div class="flex-1">
-          <a id="recognition-link" class="font-sans block px-3 py-2 text-muted" href="#">Gadgets</a>
+          <a id="recognition-link" class="font-sans block px-3 py-2 text-muted hover:text-blue-700 dark:hover:text-blue-200" href="#">Gadgets</a>
         </div>
       </nav>
     </div>
@@ -134,7 +134,7 @@
                 <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">Aug 2019 - Nov 2020 · 1 yr 4 mos</time>
                 <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Shift Service Desk Agent</h3>
                 <p class="mb-2 text-xs font-normal text-gray-500 dark:text-gray-400">
-                <a href="assets/cv.pdf" class="inline-flex items-center px-4 mt-6 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-200 focus:text-blue-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700">Download CV<svg class="w-3 h-3 ml-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg></a>
+                <a href="assets/cv.pdf" class="inline-flex items-center px-4 mt-6 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-200 focus:text-blue-700 dark:bg-gray-800 shadow-md dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700">Download CV<svg class="w-3 h-3 ml-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg></a>
             </li>
           </div>
         </div>
@@ -187,27 +187,25 @@
   </div>
 </section>
 
-<section class="bg-white dark:bg-gray-900">
+<section class="bg-white dark:bg-zinc-900">
   <div class="grid max-w-screen-xl px-4 py-8 mx-auto lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12">
       <div class="mr-auto place-self-center lg:col-span-7">
-          <h1 class="max-w-2xl mb-4 text-4xl font-extrabold tracking-tight leading-none md:text-5xl xl:text-6xl dark:text-white">Payments tool for software companies</h1>
-          <p class="max-w-2xl mb-6 font-light text-gray-500 lg:mb-8 md:text-lg lg:text-xl dark:text-gray-400">From checkout to global sales tax compliance, companies around the world use Flowbite to simplify their payment stack.</p>
-          <a href="#" class="inline-flex items-center justify-center px-5 py-3 mr-3 text-base font-medium text-center text-white rounded-lg bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:focus:ring-primary-900">
-              Get started
-              <svg class="w-5 h-5 ml-2 -mr-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
-          </a>
-          <a href="#" class="inline-flex items-center justify-center px-5 py-3 text-base font-medium text-center text-gray-900 border border-gray-300 rounded-lg hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 dark:text-white dark:border-gray-700 dark:hover:bg-gray-700 dark:focus:ring-gray-800">
-              Speak to Sales
-          </a>
+          <h2 class="reveal max-w-2xl mb-4 text-4xl font-extrabold tracking-tight leading-none md:text-4xl xl:text-5xl dark:text-white">A Vizualization of my skills overtime</h2>
+          <p class="reveal max-w-2xl mb-6 font-light text-gray-500 lg:mb-8 md:text-lg lg:text-xl dark:text-gray-400">From checkout to global sales tax compliance, companies around the world use Flowbite to simplify their payment stack.</p>
       </div>
-      <div class="hidden lg:mt-0 lg:col-span-5 lg:flex">
-          <img src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/hero/phone-mockup.png" alt="mockup">
+      <div class="lg:mt-0 lg:col-span-5 lg:flex">
+        <codersrank-skills-chart class="reveal m-2"
+          username="jakeoliverlee"
+          labels
+          legend
+          tooltip
+        ></codersrank-skills-chart>
       </div>
   </div>
 </section>
 
 
-<section class="bg-white dark:bg-zinc-900  antialiased">
+<section id="projects" class="bg-white dark:bg-zinc-900  antialiased">
   <div class="max-w-screen-xl px-4 py-8 mx-auto lg:px-6 sm:py-16 lg:py-24">
     <div class="max-w-2xl mx-auto text-center">
       <h2 class="text-3xl font-extrabold leading-tight tracking-tight text-gray-900 sm:text-4xl dark:text-white">
@@ -339,25 +337,6 @@
     window.location.href = "/work"; // Replace with the URL of the page you want to navigate to
     }
   </script>
-  <script>
-    window.addEventListener("scroll", reveal);
-
-    function reveal(){
-      var reveals = document.querySelectorAll(".reveal");
-      for(var i = 0; i < reveals.length; i++) {
-
-        var windowheight = window.innerHeight;
-        var revealtop = reveals[i].getBoundingClientRect().top;
-        var revealpoint = 150;
-
-        if(revealtop < windowheight - revealpoint){
-          reveals[i].classList.add("active");
-        }
-      }
-    }
-  </script>
-
-
-
+  <script src="scroll.js"></script>
   </body>
 </html>
