--- a/src/expressjs/pages/home/index.html
+++ b/src/expressjs/pages/home/index.html
@@ -66,12 +66,14 @@
       </nav>
     </div>
 
+
+
     <!-- About me -->
     <div class="container max-w-5xl  mx-auto h-full bg-white dark:bg-zinc-900 m-2 sm:m-0 px-8 rounded-lg">
       <div id="about-me" class="mt-7 ml-4 py-4 px-4 h-full mx-auto max-w-screen-xl lg:py-8">
         <div class="flex flex-wrap md:flex-no-wrap">
           <div class="flex-1">
-            <h1 class="text-3xl md:text-4xl  font-bold">About me</h1>
+            <h1 class="text-3xl md:text-4xl  font-bold pointer-events-none">About me</h1>
             <p class="mt-6 text-base text-zinc-600 dark:text-zinc-400 max-w-4xl sm:mb-4 sm:mx-auto">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit.
               Pellentesque Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -88,7 +90,7 @@
 <section class="bg-white dark:bg-zinc-900">
   <div class="py-4 px-4 mx-auto max-w-screen-xl lg:py-8">
       <div class="bg-none rounded-lg p-8 md:p-12 mb-8">
-          <h1 class="text-gray-900 dark:text-white text-3xl md:text-5xl font-extrabold mb-2">Here's what I know so far...</h1>
+          <h1 class="text-gray-900 dark:text-white text-3xl md:text-5xl font-extrabold mb-2 select-none">Here's what I know so far...</h1>
           <p class="text-lg font-normal text-gray-500 dark:text-gray-400 mb-6">Here are some of the skills I have picked up along the way, broken down into proficient and familiar. </p>
           </div>
       <div class="grid md:grid-cols-2 gap-8">
@@ -188,32 +190,32 @@
 </section>
 
 
-<!-- Skill visualization section -->
-<section class="bg-white dark:bg-zinc-900">
-  <div class="grid max-w-screen-xl px-4 py-8 mx-auto lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12">
-      <div class="mr-auto place-self-center lg:col-span-7">
-          <h2 class="reveal max-w-2xl mb-4 text-4xl font-extrabold tracking-tight leading-none md:text-4xl xl:text-5xl dark:text-white">A Vizualization of my skills overtime</h2>
-          <p class="reveal max-w-2xl mb-6 font-light text-gray-500 lg:mb-8 md:text-lg lg:text-xl dark:text-gray-400">From checkout to global sales tax compliance, companies around the world use Flowbite to simplify their payment stack.</p>
-      </div>
-      <div class="lg:mt-0 lg:col-span-5 lg:flex">
-        <codersrank-skills-chart class="reveal m-2"
-          username="jakeoliverlee"
-          labels
-          legend
-          tooltip
-        ></codersrank-skills-chart>
-      </div>
-  </div>
-</section>
+      <!-- Skill visualization section -->
+      <section class="bg-white dark:bg-zinc-900">
+        <div class="grid max-w-screen-xl px-4 py-8 mx-auto lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12">
+            <div class="mr-auto place-self-center lg:col-span-7">
+                <h2 class="reveal max-w-2xl mb-4 text-4xl font-extrabold tracking-tight leading-none md:text-4xl xl:text-5xl dark:text-white">A Vizualization of my skills overtime</h2>
+                <p class="reveal max-w-2xl mb-6 font-light text-gray-500 lg:mb-8 md:text-lg lg:text-xl dark:text-gray-400">From checkout to global sales tax compliance, companies around the world use Flowbite to simplify their payment stack.</p>
+            </div>
+            <div class="lg:mt-0 lg:col-span-5 lg:flex">
+              <codersrank-skills-chart class="reveal m-2"
+                username="jakeoliverlee"
+                labels
+                legend
+                tooltip
+              ></codersrank-skills-chart>
+            </div>
+        </div>
+      </section>
 
-      <div id="work_experience" class="flex space-x-4 items-center mb-2">
+      <div id="work_experience" class="select-none flex space-x-4 items-center mb-2">
         <lord-icon class="reveal"
             src="https://cdn.lordicon.com/rfnfarqt.json"
             trigger="loop"
             stroke="35"
             style="width:40px;height:40px">
         </lord-icon>
-        <span class="reveal text-lg font-medium dark:text-white">Work Experience</span>
+        <span class="reveal select-none text-lg font-medium dark:text-white">Work Experience</span>
       </div>
       <div class="flex items-center mb-2">
       </div>
@@ -265,10 +267,10 @@
 
 <!-- Projects section -->
 
-  <section id="projects" class="bg-white dark:bg-zinc-900  antialiased">
+  <section id="projects" class="bg-white dark:bg-zinc-900  antialiased select-none">
   <div class="reveal max-w-screen-xl px-4 py-8 mx-auto lg:px-6 sm:py-16 lg:py-24">
     <div class="max-w-2xl mx-auto text-center">
-      <h2 class="text-3xl font-extrabold leading-tight tracking-tight text-gray-900 sm:text-4xl dark:text-white">
+      <h2 class="select-none text-3xl font-extrabold leading-tight tracking-tight text-gray-900 sm:text-4xl dark:text-white pointer-events-none">
         Some of my work
       </h2>
       <p class="mt-4 text-base font-normal text-gray-500 sm:text-xl dark:text-gray-400">
@@ -346,12 +348,32 @@
   </div>
 </section>
 
+<div id="bottom-banner" tabindex="-1" class="fixed bottom-0 left-0 z-50 flex justify-between w-full p-4 border-t border-gray-200 bg-gray-50 dark:bg-gray-700 dark:border-gray-600">
+  <div class="flex items-center mx-auto">
+      <p class="flex items-center text-sm font-normal text-gray-500 dark:text-gray-400">
+          <span class="inline-flex p-1 mr-3 bg-gray-200 rounded-full dark:bg-gray-600">
+              <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                  <path clip-rule="evenodd" fill-rule="evenodd" d="M5 2a2 2 0 00-2 2v14l3.5-2 3.5 2 3.5-2 3.5 2V4a2 2 0 00-2-2H5zm2.5 3a1.5 1.5 0 100 3 1.5 1.5 0 000-3zm6.207.293a1 1 0 00-1.414 0l-6 6a1 1 0 101.414 1.414l6-6a1 1 0 000-1.414zM12.5 10a1.5 1.5 0 100 3 1.5 1.5 0 000-3z"></path>
+              </svg>
+              <span class="sr-only">Discount coupon</span>
+          </span>
+          <span>Get 5% commision per sale <a href="https://flowbite.com" class="flex items-center ml-0 text-sm font-medium text-blue-600 md:ml-1 md:inline-flex dark:text-blue-500 hover:underline">Become a partner <svg aria-hidden="true" class="w-4 h-4 ml-1 text-blue-600 dark:text-blue-500" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fillrule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" cliprule="evenodd"></path></svg></a></span>
+      </p>
+  </div>
+  <div class="flex items-center">
+      <button data-dismiss-target="#bottom-banner" type="button" class="flex-shrink-0 inline-flex justify-center items-center text-gray-400 hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 dark:hover:bg-gray-600 dark:hover:text-white">
+          <svg aria-hidden="true" class="w-4 h-4" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+          <span class="sr-only">Close banner</span>
+      </button>
+  </div>
+</div>
+
 
 
 
 
 <!-- Footer section -->
-<footer class="bg-white dark:bg-zinc-900">
+<footer class="bg-white dark:bg-zinc-900 select-none">
   <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
       <div class="md:flex md:justify-between">
         <div class="mb-6 md:mb-0">
