--- a/src/expressjs/pages/home/index.html
+++ b/src/expressjs/pages/home/index.html
@@ -217,10 +217,10 @@
         </lord-icon>
         <span class="reveal select-none text-lg font-medium dark:text-white">Work Experience</span>
       </div>
-      <div class="flex items-center mb-2">
+      <div class="select-none flex items-center mb-2">
       </div>
         <!-- Work Experience Section -->
-        <div class="flex flex-row justify-items-center">
+        <div class="flex flex-row justify-items-center select-none">
           <ol class="reveal h-flex-none max-w-full relative border-l border-gray-200 dark:border-gray-700 ml-4">
             <li class="mb-10 ml-4">
                 <div class="reveal absolute w-3 h-3 bg-gray-200 rounded-full mt-5 -left-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"></div>
