--- a/src/expressjs/pages/home/index.html
+++ b/src/expressjs/pages/home/index.html
@@ -69,7 +69,7 @@
 
     <!-- About me -->
     <div class="container max-w-5xl mx-auto h-full bg-white dark:bg-zinc-900 m-2 sm:m-0 px-8 rounded-lg">
-      <div id="about-me" class="mt-7 ml-4 py-4 px-4 h-full mx-auto max-w-screen-xl lg:py-8">
+      <div id="about-me" class="select-none mt-7 ml-4 py-4 px-4 h-full mx-auto max-w-screen-xl lg:py-8">
         <div class="flex flex-wrap md:flex-no-wrap justify-center">
           <div class="flex-1 mx-auto text-center md:text-left">
             <h1 class="text-3xl md:text-4xl font-bold pointer-events-none">About me</h1>
@@ -347,7 +347,9 @@
   </div>
 </section>
 
-
+<div class="reveal mx-auto max-w-screen-lg">
+  <iframe class="w-full lg:w-3/4 h-64 lg:h-96" data-src="https://github-readme-activity-graph.cyclic.app/graph?username=jakeoliverlee&theme=react" frameborder="0" scrolling="no" style="border: none;"></iframe>
+</div>
 
 <article class="mx-4 md:gap-8 md:grid md:grid-cols-3">
   <div>
@@ -358,9 +360,11 @@
           </div>
       </div>
       <ul class="space-y-4 text-sm text-gray-500 dark:text-gray-400">
-          <li class="flex items-center"><img class="w-5 h-5 mr-1.5 inline-block p-1 rounded-full" src="assets/svgs/express-svgrepo-com.svg" alt="ExpressJS" style="background-color: white;">Apartament with City View</li>
-          <li class="flex items-center"><svg aria-hidden="true" class="w-4 h-4 mr-1.5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M6 2a1 1 0 00-1 1v1H4a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2h-1V3a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zm0 5a1 1 0 000 2h8a1 1 0 100-2H6z" clip-rule="evenodd"></path></svg>3 nights December 2021</li>
-          <li class="flex items-center"><svg aria-hidden="true" class="w-4 h-4 mr-1.5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M13 6a3 3 0 11-6 0 3 3 0 016 0zM18 8a2 2 0 11-4 0 2 2 0 014 0zM14 15a4 4 0 00-8 0v3h8v-3zM6 8a2 2 0 11-4 0 2 2 0 014 0zM16 18v-3a5.972 5.972 0 00-.75-2.906A3.005 3.005 0 0119 15v3h-3zM4.75 12.094A5.973 5.973 0 004 15v3H1v-3a3 3 0 013.75-2.906z"></path></svg>Family</li>
+          <li class="flex items-center">
+            <img class="w-8 h-8 mr-1.5 inline-block p-1 rounded-full" src="assets/svgs/express-svgrepo-com.svg" alt="ExpressJS" style="background-color: white;">
+            <img class="w-6 h-6 mr-1.5 inline-block p-1 rounded-full" src="assets/svgs/express-svgrepo-com.svg" alt="ExpressJS" style="background-color: white;">
+          </li>
+          <li class="flex items-center">test</li>
       </ul>
   </div>
   <div class="col-span-2 mt-6 md:mt-0">
@@ -388,7 +392,7 @@
   </div>
 </article>
 
-<div id="bottom-banner" tabindex="-1" class="fixed bottom-0 left-0 z-50 flex justify-between w-full p-4 border-t border-gray-200 bg-gray-50 dark:bg-gray-700 dark:border-gray-600">
+<div id="bottom-banner" tabindex="-1" class="fixed bottom-0 left-0 z-50 flex justify-between w-full p-4 border-t border-gray-200 bg-gray-50 dark:bg-zinc-900 dark:border-gray-600">
   <div class="flex items-center mx-auto">
       <p class="flex items-center text-sm font-normal text-gray-500 dark:text-gray-400">
           <span class="inline-flex p-1 mr-3 bg-gray-200 rounded-full dark:bg-gray-600">
@@ -442,5 +446,19 @@
   </script>
   <script src="scroll.js"></script>
   <script src="bottom_banner.js"></script>
+  <script>
+    const revealGraph = document.querySelector('.reveal iframe');
+
+    const observer = new IntersectionObserver(entries => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          revealGraph.setAttribute('src', revealGraph.getAttribute('data-src'));
+          observer.unobserve(entry.target);
+        }
+      });
+    });
+
+    observer.observe(revealGraph);
+  </script>
   </body>
 </html>
