--- a/src/expressjs/pages/home/index.html
+++ b/src/expressjs/pages/home/index.html
@@ -296,7 +296,7 @@
           <img class="h-10 w-10 inline-block mr-2" src="assets/svgs/icons8-python.svg" alt="Python">
           <img class="h-10 w-10 inline-block mr-2 rounded-full" src="assets/svgs/aws-icon-services.svg" alt="AWS Services">
         </div>
-        <button type="button" href="#streamline" class="text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2" onclick="goToPage()">
+        <button type="button" href="#streamline" class="text-white animate-pulse bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2" onclick="goToPage()">
           Read more
         </button>
       </div>
@@ -341,7 +341,7 @@
         <div class="flex w-full flex-items-center justify-center min-h-3">
           <img class="h-10 w-10 inline-block mr-2" src="assets/svgs/icons8-python.svg" alt="Python"> <!-- Move the img tag here -->
         </div>
-        <button type="button" class="text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2 " onclick="goToPage()">
+        <button type="button" class="text-white animate-pulse bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2 " onclick="goToPage()">
           Read more
         </button>
         </a>
@@ -419,8 +419,10 @@
         </div>
     </div>
     <ul class="list-disc ml-6 mb-4 text-gray-500 dark:text-gray-400">
-      <li>Before the re</li>
-      <li>It is obviously not the same build quality as those very expensive watches. But that is like comparing a Citroën to a Ferrari. This watch was well under £100! An absolute bargain.</li>
+      <li>This project taught me a lot about UI/UX design and creating an engaging user experience, which was a new skill for me considering my background in backend-focused tech.</li>
+      <li>I learned about the simplicity of creating a CI/CD pipeline using Google's Firebase and Github Actions.</li>
+      <li>I learned how to test frontend code, specifically using Cypress for component and E2E testing.</li>
+      <li>Integrating dark and light mode compatibility was extremely simple with Tailwind, allowing my project to be accessible for those during the day as well as at night!</li>
     </ul>
   </div>
 </article>
